Updated TRMM RSL with larger UF buffer

--- a/trmm_rsl/trmm_rsl_1.47/meta.yaml
+++ b/trmm_rsl/trmm_rsl_1.47/meta.yaml
@@ -1,12 +1,16 @@
 package:
-  name: trmm_rsl
-  version: 1.47
+    name: trmm_rsl
+    version: 1.47
 
 source:
-  fn: rsl.v1.47.tar.gz
-  url: ftp://trmm-fc.gsfc.nasa.gov/software/rsl-v1.47.tar.gz
+    fn: rsl.v1.47.tar.gz
+    url: ftp://trmm-fc.gsfc.nasa.gov/software/rsl-v1.47.tar.gz
+
+    patches:
+        - patch.diff
+build:
+    number: 2
 
 about:
-  home: http://trmm-fc.gsfc.nasa.gov/trmm_gv/software/rsl/
-  license: LGPL
-
+    home: http://trmm-fc.gsfc.nasa.gov/trmm_gv/software/rsl/
+    license: LGPL
